--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,129 @@
+@font-face {
+    font-family: "Young Serif";
+    src: url("assets/fonts/young-serif/YoungSerif-Regular.ttf");
+}
+@font-face {
+    font-family: "Outfit";
+    src: url("assets/fonts/outfit/Outfit-VariableFont_wght.ttf");
+}
+:root {
+    --white: hsl(0, 0%, 100%);
 
+    --Stone-100: hsl(30, 54%, 90%);
+    --Stone-150: hsl(30, 18%, 87%);
+    --Stone-600: hsl(30, 10%, 34%);
+    --Stone-900: hsl(24, 5%, 18%);
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+    --Brown-800: hsl(14, 45%, 36%);
+
+    --Rose-800: hsl(332, 51%, 32%);
+    --Rose-50: hsl(330, 100%, 98%);
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    line-height: 175%;
+}
+body {
+    background-color: var(--Stone-100);
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+    font-family: "Outfit", sans-serif;
+}
+h1, h2 {
+    font-family: "Young Serif", serif;
+}
+h1 {
+    margin-top: 20px;
+    margin-bottom: -20px;
+    color: var(--Stone-900);
+}
+h2 {
+    color: var(--Brown-800);
+}
+h3 {
+    color: var(--Rose-800);
+}
+ol, ul {
+    margin-left: 16px;
+}
+li {
+    padding-left: 16px;
+}
+li::marker {
+    color: var(--Brown-800);
+    font-weight: 700;
+}
+hr {
+    border: none;
+    height: 1px;
+    background-color: var(--Stone-150);
+}
+#recipe {
+    background-color: var(--white);
+    width: 35%;
+    padding: 32px;
+    border-radius: 20px;
+    margin: 150px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+}
+#header-image {
+    width: 100%;
+    border-radius: 10px;
+}
+#prep-time {
+    background-color: var(--Rose-50);
+    padding: 26px;
+    border-radius: 10px;
+}
+#prep-time li::marker {
+    color: var(--Rose-800);
+}
+.list-start {
+    font-weight: 700;
+}
+#nutrition-chart {
+    display: grid;
+    grid-template-areas: 1fr 1fr;
+}
+#nutrition-chart hr {
+    grid-column-start: span 2;
+}
+.chart-item {
+    padding: 10px 20px;
+}
+.nutrition-value {
+    font-weight: 700;
+    color: var(--Brown-800);
+}
+@media screen and (max-width: 1024px) {
+    #recipe {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 412px) {
+    #recipe {
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+    }
+    #header-image {
+        border-radius: 0;
+        width: 100vw;
+        margin: -32px 0 0 -32px;
+    }
+}
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+    padding: 10px;
+}
+.attribution a { 
+    color: var(--Brown-800);
+}
