--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: "Outfit", sans-serif;
+    font-weight: 400;
 }
 h1, h2 {
     font-family: "Young Serif", serif;
@@ -65,7 +66,7 @@ hr {
 }
 #recipe {
     background-color: var(--white);
-    width: 35%;
+    width: 50%;
     padding: 32px;
     border-radius: 20px;
     margin: 150px 0;
